# Fibonacci

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Standalone.yml
cmake/: GetCPM.cmake
include/: fibonacci.h
